--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "nikic/fast-route": "^1.3",
         "league/container": "^3.3",
       "ext-pdo": "*",
-        "catfan/medoo": "^1.7"
+        "catfan/medoo": "^1.7",
+        "finnhub/client": "^1.1",
+      "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
